Contact form added

--- a/index.html
+++ b/index.html
@@ -1,114 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Innovative Problem Solutions</title>
-        <!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
-    </head>
-    <body>
-        <section class="navigation">
-            <div class="nav-container">
-                <div class="brand"><a href="#landing-area-container">Innovative Problem Solutions</a>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Innovative Problem Solutions</title>
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
+</head>
+
+<body>
+    <section class="navigation">
+        <div class="nav-container">
+            <div class="brand"><a href="index.html">Innovative Problem Solutions</a>
             </div>
             <nav>
                 <div class="nav-mobile">
-                    <a href="#!" id="nav-toggle"><span></span></a>
+                    <a href="#" id="nav-toggle"><span></span></a>
                 </div>
                 <ul class="nav-list">
-                    <li><a href="#!">Products</a>
-                    <ul class="nav-dropdown">
-                        <li><a href="#!">Product A</a></li>
-                        <li><a href="#!">Product B</a></li>
-                    </ul>
-                </li>
-                <li><a href="#!">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</section>
-<div id="landing-area-container" class="landing-area-container">
-    <!-- <a href="#products">
-        <h1>Innovative Problem Solutions <br>
-        <i id="arrow" class="icon-down-big"></i>
-        </h1>
-    </a> -->
-
-    <div class="wrap text-center">
-        <div class="row">
-            <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/green_unstable.png" alt=""></div>
-            <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon13.svg" alt=""></div>
-            <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon12.svg" alt=""></div>
-            <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/red_unstable.png" alt=""></div>
+                    <li><a href="#">Products</a>
+                        <ul class="nav-dropdown">
+                            <li><a href="#">Product A</a></li>
+                            <li><a href="#">Product B</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-
-        <div class="row">
-            <div class="col-md-2 col-sm-2"></div>
-            <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_1.svg" alt=""></div>
-            <div class="col-md-4 col-sm-4 v-center"><a class="landing-area-brand" href="#products"><div><h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div></a></div>
-            <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_3.svg" alt=""></div>
-            <div class="col-md-2 col-sm-2"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-4 col-sm-4"></div>
-            <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon8.svg" alt=""></div>
-            <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_2.svg" alt=""></div>
-            <div class="col-md-4 col-sm-4"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-3 col-sm-3"><img src="assets/media/green_stable.png" alt=""></div>
-            <div class="col-md-6 col-sm-6"><img src="assets/media/patent_icon_4.svg" alt=""></div>
-            <div class="col-md-3 col-sm-3"><img src="assets/media/red_stable.png" alt=""></div>
-        </div>
-    </div>
-
-    <div class="mobile-wrap text-center">
-        <div class="row">
-            <div class="col-xs-12"><img src="assets/media/mobile_icon_1.png"></div>
-        </div>
-        <div class="row">
-            <a class="landing-area-brand" href="#products"><div class="col-xs-12 v-center"><h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div></a>
-        </div>
-        <div class="row">
-            <div class="col-xs-12"><img src="assets/media/mobile_icon_2.png"></div>
-        </div>
-    </div>
-
-    
-</div>
-
-<section id="products">
-    <div>
-        <h3 class="text-center underline">Product Showcase</h3>
-    </div>
-    
-    <div class="product-container">
-        <div class="product">
-            <img src="assets/media/IPSCS0700.gif" alt="">
-            <div class="text-center">
-            <h3 class="text-center">Straight Cargo System 700</h3>
-            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit.</p>
-            <button class="learn-more-btn">Learn More</button>
+    </section>
+    <section id="landing-area-container" class="landing-area-container">
+        <div class="wrap text-center">
+            <div class="row">
+                <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/green_unstable.png" alt=""></div>
+                <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon13.svg" alt=""></div>
+                <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon12.svg" alt=""></div>
+                <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/red_unstable.png" alt=""></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2 col-sm-2"></div>
+                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_1.svg" alt=""></div>
+                <div class="col-md-4 col-sm-4 v-center">
+                    <a class="landing-area-brand" href="#products">
+                        <div>
+                            <h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div>
+                    </a>
+                </div>
+                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_3.svg" alt=""></div>
+                <div class="col-md-2 col-sm-2"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-4"></div>
+                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon8.svg" alt=""></div>
+                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_2.svg" alt=""></div>
+                <div class="col-md-4 col-sm-4"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-3"><img src="assets/media/green_stable.png" alt=""></div>
+                <div class="col-md-6 col-sm-6"><img src="assets/media/patent_icon_4.svg" alt=""></div>
+                <div class="col-md-3 col-sm-3"><img src="assets/media/red_stable.png" alt=""></div>
             </div>
         </div>
-
-        <div class="product">
-            <img src="assets/media/IPSCS0800.gif" alt="">
-            <div class="text-center">
-            <h3 class="text-center">Straight Cargo System 800</h3>
-            <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit.</p>
-            <button class="learn-more-btn">Learn More</button>
+        <div class="mobile-wrap text-center">
+            <div class="row">
+                <div class="col-xs-12"><img src="assets/media/mobile_icon_1.png"></div>
+            </div>
+            <div class="row">
+                <a class="landing-area-brand" href="#products">
+                    <div class="col-xs-12 v-center">
+                        <h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div>
+                </a>
+            </div>
+            <div class="row">
+                <div class="col-xs-12"><img src="assets/media/mobile_icon_2.png"></div>
             </div>
         </div>
-    </div>
-</section>
-<script src="assets/js/jquery-3.2.1.min.js"></script>
-<script src="assets/js/navbar.js"></script>
-<script src="assets/js/main.js"></script>
+    </section>
+    <section id="products">
+        <div>
+            <h3 class="text-center underline">Product Showcase</h3>
+        </div>
+
+        <div class="product-container">
+            <div class="product">
+                <img src="assets/media/IPSCS0700.gif" alt="">
+                <div class="text-center">
+                    <h3 class="text-center">Straight Cargo System 700</h3>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit.</p>
+                    <button class="learn-more-btn">Learn More</button>
+                </div>
+            </div>
+            <div class="product">
+                <img src="assets/media/IPSCS0800.gif" alt="">
+                <div class="text-center">
+                    <h3 class="text-center">Straight Cargo System 800</h3>
+                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit.</p>
+                    <button class="learn-more-btn">Learn More</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script src="assets/js/navbar.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
