Basic mobile scaling added for contact

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Innovative Problem Solutions | Contact</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
     <link rel="stylesheet" href="assets/css/style.css">
@@ -53,7 +54,7 @@
                 </div>
 
                 <div class="text-center">
-                    <button class="" type="submit" value="Send">Submit</button>
+                    <button class="submit-btn" type="submit" value="Send">Submit</button>
                 </div>
             </form>
         </div>
