Product pages added

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <ul class="nav-list">
                     <li><a href="#">Products</a>
                         <ul class="nav-dropdown">
-                            <li><a href="#">Product A</a></li>
-                            <li><a href="#">Product B</a></li>
+                            <li><a href="product_scs_700.html">SCS 700</a></li>
+                            <li><a href="product_scs_800.html">SCS 800</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
