Meta tag descriptions added, basic product descriptions added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Innovative Problem Solutions</title>
+    <title>Innovative Problem Solutions | Straight Cargo System</title>
+    <meta name="description" content="Innovative Problem Solutions are the makers of the Straight Cargo System (SCS) used to stabilize vehicle cargo carriers. Perfect for cars with wobbly cargo bays.">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -21,7 +22,7 @@
                     <a href="#" id="nav-toggle"><span></span></a>
                 </div>
                 <ul class="nav-list">
-                    <li><a href="#">Products</a>
+                    <li><a id="dropdown-link" href="#">Products</a>
                         <ul class="nav-dropdown">
                             <li><a href="product_scs_700.html">SCS 700</a></li>
                             <li><a href="product_scs_800.html">SCS 800</a></li>
@@ -35,33 +36,33 @@
     <section id="landing-area-container" class="landing-area-container">
         <div class="wrap text-center">
             <div class="row">
-                <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/green_unstable.png" alt=""></div>
-                <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon13.svg" alt=""></div>
-                <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon12.svg" alt=""></div>
-                <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/red_unstable.png" alt=""></div>
+                <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/green_unstable.png" alt="green car crossed out with unstable cargo"></div>
+                <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon13.svg" alt="top support Straight Cargo System"></div>
+                <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon12.svg" alt="bottom support Straight Cargo System"></div>
+                <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/red_unstable.png" alt="red car crossed out with unstable cargo"></div>
             </div>
             <div class="row">
                 <div class="col-md-2 col-sm-2"></div>
-                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_1.svg" alt=""></div>
+                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_1.svg" alt="sketch of patent"></div>
                 <div class="col-md-4 col-sm-4 v-center">
                     <a class="landing-area-brand" href="#products">
                         <div>
                             <h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div>
                     </a>
                 </div>
-                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_3.svg" alt=""></div>
+                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_3.svg" alt="sketch of patent"></div>
                 <div class="col-md-2 col-sm-2"></div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-4"></div>
-                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon8.svg" alt=""></div>
-                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_2.svg" alt=""></div>
+                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon8.svg" alt="sketch of patent"></div>
+                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_2.svg" alt="sketch of patent"></div>
                 <div class="col-md-4 col-sm-4"></div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-3"><img src="assets/media/green_stable.png" alt=""></div>
-                <div class="col-md-6 col-sm-6"><img src="assets/media/patent_icon_4.svg" alt=""></div>
-                <div class="col-md-3 col-sm-3"><img src="assets/media/red_stable.png" alt=""></div>
+                <div class="col-md-3 col-sm-3"><img src="assets/media/green_stable.png" alt="green car with stable cargo"></div>
+                <div class="col-md-6 col-sm-6"><img src="assets/media/patent_icon_4.svg" alt="patent image"></div>
+                <div class="col-md-3 col-sm-3"><img src="assets/media/red_stable.png" alt="red car with stable cargo"></div>
             </div>
         </div>
         <div class="mobile-wrap text-center">
@@ -86,18 +87,18 @@
 
         <div class="product-container">
             <div class="product">
-                <img src="assets/media/IPSCS0700.gif" alt="">
+                <img src="assets/media/IPSCS0700.gif" alt="gif explaining Straight Cargo System 700">
                 <div class="text-center">
                     <h3 class="text-center">Straight Cargo System 700</h3>
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit.</p>
+                    <p class="text-left">Provides bottom support to wobbly, unstable cargo. Used on vehicles lacking the bumper space for top support. Perfect for keeping cargo from shifting and tilting.</p>
                     <button class="learn-more-btn">Learn More</button>
                 </div>
             </div>
             <div class="product">
-                <img src="assets/media/IPSCS0800.gif" alt="">
+                <img src="assets/media/IPSCS0800.gif" alt="gif explaining Straight Cargo System 800">
                 <div class="text-center">
                     <h3 class="text-center">Straight Cargo System 800</h3>
-                    <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non sapien a sem cursus semper. Mauris et sodales magna, quis rhoncus elit. Maecenas hendrerit pulvinar mauris nec tincidunt. Praesent est odio, consectetur ac turpis eu, vestibulum dignissim velit.</p>
+                    <p class="text-left">Problems with unbalanced cargo? The Straight Cargo System 800 provides top support for wobbly, unstable cargo. Perfectly stablizes cargo and prevents shifting.</p>
                     <button class="learn-more-btn">Learn More</button>
                 </div>
             </div>
