--- a/product_scs_700.html
+++ b/product_scs_700.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Innovative Problem Solutions | Straight Cargo System 700</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="The Straight Cargo System 700 provides bottom support to unstable cargo. Perfect for keeping cargo from sliding.">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
     <link rel="stylesheet" href="assets/css/style.css">
@@ -39,7 +40,7 @@
         and watch it with your favorite video player!
         </video>
 
-        <p>Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah </p>
+        <p class="text-left">If your vehicle cargo keeps tilting and shifting the Straight Cargo System is perfect for you. The Stright Cargo System 700 provides bottom support for cargo carriers. The 700 model is used for cars lacking enough bumper space for the 800. The Straight Cargo System is perfect for ramp applications and an easy solution to unbalanced cargo.</p>
 
         <button class="buy-btn"><a href="#">Buy On Ebay</a></button>
         <button class="learn-more-btn"><a href="assets/media/IPSCS0700_Static_RevA3.pdf" download="IPSCS0700.pdf">Download PDF</a></button>
