--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Innovative Problem Solutions | Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Contact Innovative Problem Solutions.">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
     <link rel="stylesheet" href="assets/css/style.css">
