--- a/product_scs_800.html
+++ b/product_scs_800.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Innovative Problem Solutions | Straight Cargo System 800</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="The Straight Cargo System 800 provides top support to unstable cargo. Perfect for keeping cargo from sliding.">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
     <link rel="stylesheet" href="assets/css/style.css">
@@ -39,7 +40,7 @@
         and watch it with your favorite video player!
         </video>
 
-        <p>Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah </p>
+        <p class="text-left">The Straight Cargo System 800 is a perfect solution to unbalanced cargo. Unlike the model 700 it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great from ramp applications and will keep cargo carriers from tilting.</p>
 
         <button class="buy-btn"><a href="#">Buy On Ebay</a></button>
         <button class="learn-more-btn"><a href="assets/media/IPSCS0800_Static_RevA3.pdf" download="IPSCS0800.pdf">Download PDF</a></button>
