--- a/product_scs_800.html
+++ b/product_scs_800.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Innovative Problem Solutions | Straight Cargo System 800</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Straight Cargo System 800 provides top support to unstable cargo. Perfect for keeping cargo from sliding.">
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-    <section class="navigation">
-        <div class="nav-container">
-            <div class="brand"><a href="index.html">Innovative Problem Solutions</a>
+    <head>
+        <meta charset="UTF-8">
+        <title>Innovative Problem Solutions | Straight Cargo System 800</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="The Straight Cargo System 800 provides top support to unstable cargo. Perfect for keeping cargo from sliding.">
+        <link rel="stylesheet" href="assets/css/normalize.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.css" type="text/css" >
+        <link rel="stylesheet" href="assets/css/style.css">
+    </head>
+    <body>
+        <section class="navigation">
+            <div class="nav-container">
+                <div class="brand"><a href="index.html">Innovative Problem Solutions</a>
             </div>
             <nav>
                 <div class="nav-mobile">
@@ -20,34 +20,30 @@
                 </div>
                 <ul class="nav-list">
                     <li><a href="#">Products</a>
-                        <ul class="nav-dropdown">
-                            <li><a href="product_scs_700.html">SCS 700</a></li>
-                            <li><a href="product_scs_800.html">SCS 800</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </section>
-    
-    <section class="content text-center">
-        <h1>Straight Cargo System 800</h1>
+                    <ul class="nav-dropdown">
+                        <li><a href="product_scs_700.html">SCS 700</a></li>
+                        <li><a href="product_scs_800.html">SCS 800</a></li>
+                    </ul>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+</section>
 
-        <video controls src="assets/media/IPSCS0800_Annimation_RevA2.mp4" autoplay poster="posterimage.jpg">
-        Sorry, your browser doesn't support embedded videos, 
+<section class="content text-center">
+    <h1>Straight Cargo System 800</h1>
+    <video controls src="assets/media/IPSCS0800_Annimation_RevA2.mp4" autoplay poster="posterimage.jpg">
+        Sorry, your browser doesn't support embedded videos,
         but don't worry, you can <a href="assets/media/IPSCS0800_Annimation_RevA2.mp4">download it</a>
         and watch it with your favorite video player!
-        </video>
-
-        <p class="text-left">The Straight Cargo System 800 is a perfect solution to unbalanced cargo. Unlike the model 700 it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great from ramp applications and will keep cargo carriers from tilting.</p>
-
-        <button class="buy-btn"><a href="#">Buy On Ebay</a></button>
-        <button class="learn-more-btn"><a href="assets/media/IPSCS0800_Static_RevA3.pdf" download="IPSCS0800.pdf">Download PDF</a></button>
-    </section>
-
-    <script src="assets/js/jquery-3.2.1.min.js"></script>
-    <script src="assets/js/navbar.js"></script>
-    <script src="assets/js/main.js"></script>
+    </video>
+    <p class="text-left">The Straight Cargo System 800 is a perfect solution to unbalanced cargo. Unlike the 700 model it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great from ramp applications and will keep cargo carriers from tilting.</p>
+    <button class="buy-btn"><a href="#">Buy On Ebay</a></button>
+    <button class="learn-more-btn"><a href="assets/media/IPSCS0800_Static_RevA3.pdf" download="IPSCS0800.pdf">Download PDF</a></button>
+</section>
+<script src="assets/js/jquery-3.2.1.min.js"></script>
+<script src="assets/js/navbar.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
