Added learn more link to index

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="text-center">
                     <h3 class="text-center">Straight Cargo System 700</h3>
                     <p class="text-left">Provides bottom support to wobbly, unstable cargo. Used on vehicles lacking the bumper space for top support. Perfect for keeping cargo from shifting and tilting.</p>
-                    <button class="learn-more-btn">Learn More</button>
+                    <button class="learn-more-btn"><a href="product_scs_700.html">Learn More</a></button>
                 </div>
             </div>
             <div class="product">
@@ -99,7 +99,7 @@
                 <div class="text-center">
                     <h3 class="text-center">Straight Cargo System 800</h3>
                     <p class="text-left">Problems with unbalanced cargo? The Straight Cargo System 800 provides top support for wobbly, unstable cargo. Perfectly stablizes cargo and prevents shifting.</p>
-                    <button class="learn-more-btn">Learn More</button>
+                    <button class="learn-more-btn"><a href="product_scs_800.html">Learn More</a></button>
                 </div>
             </div>
         </div>
