--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="landing-area-container" class="landing-area-container">
         <div class="wrap text-center">
             <div class="row">
-                <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/green_unstable.png" alt="green car crossed out with unstable cargo"></div>
+                <div class="col-md-3 col-sm-3 x-across"><img class="car-image" src="assets/media/green_unstable.png" alt="green car crossed out with unstable cargo"></div>
                 <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon13.svg" alt="top support Straight Cargo System"></div>
                 <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon12.svg" alt="bottom support Straight Cargo System"></div>
                 <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/red_unstable.png" alt="red car crossed out with unstable cargo"></div>
