Contact form action updated

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 <section id="contact">
     <div class="contact-container">
         <div class="form-container">
-            <form data-parsley-validate id="form1" action="/customer_service"
+            <form data-parsley-validate id="form1" action="https://formspree.io/customerservice@ips-llc.net"
                 method="POST">
                 <div class="text-center thick-border dept-choice">
                     <p>Please choose a dept:</p>
