--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <section id="landing-area-container" class="landing-area-container">
         <div class="wrap text-center">
             <div class="row">
-                <div class="col-md-3 col-sm-3 x-across"><img class="car-image" src="assets/media/green_unstable.png" alt="green car crossed out with unstable cargo"></div>
+                <div class="col-md-3 col-sm-3 x-across"><img class="img-scale" src="assets/media/green_unstable.png" alt="green car crossed out with unstable cargo"></div>
                 <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon13.svg" alt="top support Straight Cargo System"></div>
                 <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon12.svg" alt="bottom support Straight Cargo System"></div>
-                <div class="col-md-3 col-sm-3 x-across"><img src="assets/media/red_unstable.png" alt="red car crossed out with unstable cargo"></div>
+                <div class="col-md-3 col-sm-3 x-across"><img class="img-scale" src="assets/media/red_unstable.png" alt="red car crossed out with unstable cargo"></div>
             </div>
             <div class="row">
                 <div class="col-md-2 col-sm-2"></div>
@@ -60,9 +60,9 @@
                 <div class="col-md-4 col-sm-4"></div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-3"><img src="assets/media/green_stable.png" alt="green car with stable cargo"></div>
+                <div class="col-md-3 col-sm-3"><img class="img-scale" src="assets/media/green_stable.png" alt="green car with stable cargo"></div>
                 <div class="col-md-6 col-sm-6"><img src="assets/media/patent_icon_4.svg" alt="patent image"></div>
-                <div class="col-md-3 col-sm-3"><img src="assets/media/red_stable.png" alt="red car with stable cargo"></div>
+                <div class="col-md-3 col-sm-3"><img class="img-scale" src="assets/media/red_stable.png" alt="red car with stable cargo"></div>
             </div>
         </div>
         <div class="mobile-wrap text-center">
