--- a/product_scs_800.html
+++ b/product_scs_800.html
@@ -39,7 +39,7 @@
         and watch it with your favorite video player!
     </video>
     <p class="text-left">The Straight Cargo System 800 is a perfect solution to unbalanced cargo. Unlike the 700 model it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great from ramp applications and will keep cargo carriers from tilting.</p>
-    <button class="buy-btn"><a href="#">Buy On Ebay</a></button>
+    <button class="buy-btn"><a href="http://www.ebay.com/itm/Accessory-for-CARGO-CARRIERS-/322507087638?hash=item4b16eb9f16:g:70sAAOSwtGlZDRQQ&vxp=mtr">Buy On Ebay</a></button>
     <button class="learn-more-btn"><a href="assets/media/IPSCS0800_Static_RevA3.pdf" download="IPSCS0800.pdf">Download PDF</a></button>
 </section>
 <script src="assets/js/jquery-3.2.1.min.js"></script>
