New pdfs added, old photos deleted, button tags removed and replaced with a tags

--- a/product_scs_800.html
+++ b/product_scs_800.html
@@ -39,8 +39,11 @@
         and watch it with your favorite video player!
     </video>
     <p class="text-left">The Straight Cargo System 800 is a perfect solution to unbalanced cargo. Unlike the 700 model it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great from ramp applications and will keep cargo carriers from tilting.</p>
-    <button class="buy-btn"><a href="http://www.ebay.com/itm/Accessory-for-CARGO-CARRIERS-/322507087638?hash=item4b16eb9f16:g:70sAAOSwtGlZDRQQ&vxp=mtr" target="_blank">Buy On Ebay</a></button>
-    <button class="learn-more-btn"><a href="assets/media/IPSCS0800_Static_RevA3.pdf" download="IPSCS0800.pdf">Download PDF</a></button>
+    <a class="buy-btn" href="http://www.ebay.com/itm/Accessory-for-CARGO-CARRIERS-/322507087638?hash=item4b16eb9f16:g:70sAAOSwtGlZDRQQ&vxp=mtr" target="_blank">Buy On Ebay</a>
+    <br>
+    <a class="learn-more-btn" href="assets/media/Instructions_IPSCS0800RC.pdf" download="Instructions_IPSCS0800.pdf">Download Instructions</a>
+    <br>
+    <a class="learn-more-btn" href="assets/media/Application_IPSCS0800R.pdf" download="Guidelines_IPSCS0800.pdf">Download Guidelines</a>
 </section>
 <script src="assets/js/jquery-3.2.1.min.js"></script>
 <script src="assets/js/navbar.js"></script>
