--- a/product_scs_700.html
+++ b/product_scs_700.html
@@ -38,8 +38,11 @@
         and watch it with your favorite video player!
     </video>
     <p class="text-left">If your vehicle cargo keeps tilting and shifting the Straight Cargo System is perfect for you. The Stright Cargo System 700 provides bottom support for cargo carriers. The 700 model is used for cars lacking enough bumper space for the 800. The Straight Cargo System is perfect for ramp applications and an easy solution to unbalanced cargo.</p>
-    <button class="buy-btn"><a href="http://www.ebay.com/itm/CARGO-CARRIER-STRAIGHT-CARGO-SYSTEM-/322507099536?hash=item4b16ebcd90:g:D7sAAOSwnONZDPnR&vxp=mtr" target="_blank">Buy On Ebay</a></button>
-    <button class="learn-more-btn"><a href="assets/media/IPSCS0700_Static_RevA3.pdf" download="IPSCS0700.pdf">Download PDF</a></button>
+    <a class="buy-btn" href="http://www.ebay.com/itm/CARGO-CARRIER-STRAIGHT-CARGO-SYSTEM-/322507099536?hash=item4b16ebcd90:g:D7sAAOSwnONZDPnR&vxp=mtr" target="_blank">Buy On Ebay</a>
+    <br>
+    <a class="learn-more-btn" href="assets/media/Instructions_IPSCS0700RC.pdf" download="Instructions_IPSCS0700.pdf">Download Instructions</a>
+    <br>
+    <a class="learn-more-btn" href="assets/media/Application_IPSCS0700R.pdf" download="Guidelines_IPSCS0700.pdf">Download Guidelines</a>
 </section>
 
 <script src="assets/js/jquery-3.2.1.min.js"></script>
