unstable images replaced but are too zoomed in

--- a/index.html
+++ b/index.html
@@ -35,34 +35,18 @@
     </section>
     <section id="landing-area-container" class="landing-area-container">
         <div class="wrap text-center">
-            <div class="row">
-                <div class="col-md-3 col-sm-3 x-across"><img class="img-scale" src="assets/media/green_unstable.png" alt="green car crossed out with unstable cargo"></div>
-                <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon13.svg" alt="top support Straight Cargo System"></div>
-                <div class="col-md-3 col-sm-3"><img src="assets/media/patent_icon12.svg" alt="bottom support Straight Cargo System"></div>
-                <div class="col-md-3 col-sm-3 x-across"><img class="img-scale" src="assets/media/red_unstable.png" alt="red car crossed out with unstable cargo"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-2 col-sm-2"></div>
-                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_1.svg" alt="sketch of patent"></div>
-                <div class="col-md-4 col-sm-4 v-center">
-                    <a class="landing-area-brand" href="#products">
+            <div class="row top-row">
+                <div class="col-md-4 col-sm-4"><img class="circle" src="assets/media/green_unstable_circle.png" alt="green car crossed out with unstable cargo"></div>
+                <div class="col-md-4 col-sm-4"><a class="landing-area-brand" href="#products">
                         <div>
-                            <h1>Innovative Problem Solutions <br> <i id="arrow" class="icon-down-big"></i></h1></div>
-                    </a>
-                </div>
-                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_3.svg" alt="sketch of patent"></div>
-                <div class="col-md-2 col-sm-2"></div>
+                            <h1>Innovative Problem Solutions, LLC <br> <i id="arrow" class="icon-down-big"></i></h1></div>
+                    </a></div>
+                <div class="col-md-4 col-sm-4"><img class="circle" src="assets/media/red_unstable_circle.png" alt="red car crossed out with unstable cargo"></div>
             </div>
-            <div class="row">
-                <div class="col-md-4 col-sm-4"></div>
-                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon8.svg" alt="sketch of patent"></div>
-                <div class="col-md-2 col-sm-2 v-center"><img src="assets/media/patent_icon_2.svg" alt="sketch of patent"></div>
-                <div class="col-md-4 col-sm-4"></div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-3"><img class="img-scale" src="assets/media/green_stable.png" alt="green car with stable cargo"></div>
-                <div class="col-md-6 col-sm-6"><img src="assets/media/patent_icon_4.svg" alt="patent image"></div>
-                <div class="col-md-3 col-sm-3"><img class="img-scale" src="assets/media/red_stable.png" alt="red car with stable cargo"></div>
+            <div class="row bot-row">
+                <div class="col-md-6 col-sm-6"><img src="assets/media/green_stable.png" alt="green car with stable cargo"></div>
+
+                <div class="col-md-6 col-sm-6"><img src="assets/media/red_stable.png" alt="red car with stable cargo"></div>
             </div>
         </div>
         <div class="mobile-wrap text-center">
@@ -91,7 +75,7 @@
                 <div class="text-center">
                     <h3 class="text-center">Straight Cargo System 700</h3>
                     <p class="text-left">Provides bottom support to wobbly, unstable cargo. Used on vehicles lacking the bumper space for top support. Perfect for keeping cargo from shifting and tilting.</p>
-                    <button class="learn-more-btn"><a href="product_scs_700.html">Learn More</a></button>
+                    <a class="learn-more-btn" href="product_scs_700.html">Learn More</a>
                 </div>
             </div>
             <div class="product">
@@ -99,7 +83,7 @@
                 <div class="text-center">
                     <h3 class="text-center">Straight Cargo System 800</h3>
                     <p class="text-left">Problems with unbalanced cargo? The Straight Cargo System 800 provides top support for wobbly, unstable cargo. Perfectly stablizes cargo and prevents shifting.</p>
-                    <button class="learn-more-btn"><a href="product_scs_800.html">Learn More</a></button>
+                    <a class="learn-more-btn" href="product_scs_800.html">Learn More</a>
                 </div>
             </div>
         </div>
