--- a/product_scs_800.html
+++ b/product_scs_800.html
@@ -38,7 +38,7 @@
         but don't worry, you can <a href="assets/media/IPSCS0800_Annimation_RevA2.mp4">download it</a>
         and watch it with your favorite video player!
     </video>
-    <p class="text-left">The Straight Cargo System 800 is a perfect solution to unbalanced cargo. Unlike the 700 model it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great from ramp applications and will keep cargo carriers from tilting.</p>
+    <p class="text-left">The Straight Cargo System 800 is a perfect solution for unbalanced cargo. Unlike the 700 model, it provides top support and is useful on vehicles with bumper space. The Straight Cargo System is great for ramp applications and will keep cargo carriers from tilting.</p>
     <a class="buy-btn" href="http://www.ebay.com/itm/Accessory-for-CARGO-CARRIERS-/322507087638?hash=item4b16eb9f16:g:70sAAOSwtGlZDRQQ&vxp=mtr" target="_blank">Buy On Ebay</a>
     <br>
     <a class="learn-more-btn" href="assets/media/Instructions_IPSCS0800RC.pdf" download="Instructions_IPSCS0800.pdf">Download Instructions</a>
