Bottom Landing page images cropped

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <div class="col-md-4 col-sm-4"><img class="circle" src="assets/media/red_unstable_circle.png" alt="red car crossed out with unstable cargo"></div>
             </div>
             <div class="row bot-row">
-                <div class="col-md-6 col-sm-6"><img src="assets/media/green_stable.png" alt="green car with stable cargo"></div>
+                <div class="col-md-6 col-sm-6"><img src="assets/media/green_stable_cropped.png" alt="green car with stable cargo"></div>
 
-                <div class="col-md-6 col-sm-6"><img src="assets/media/red_stable.png" alt="red car with stable cargo"></div>
+                <div class="col-md-6 col-sm-6"><img src="assets/media/red_stable_cropped.png" alt="red car with stable cargo"></div>
             </div>
         </div>
         <div class="mobile-wrap text-center">
