Product copy updated with keywords

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <img src="assets/media/IPSCS0700.gif" alt="gif explaining Straight Cargo System 700">
                 <div class="text-center">
                     <h3 class="text-center">Straight Cargo System 700</h3>
-                    <p class="text-left">Provides bottom support to wobbly, unstable cargo. Used on vehicles lacking the bumper space for top support. Perfect for keeping cargo from shifting and tilting.</p>
+                    <p class="text-left">The Straight Cargo System 700 is a vehicle cargo carrier that provides bottom support to wobbly, unstable cargo. Used on vehicles lacking the bumper space for top support. Perfect for keeping a cargo rack from shifting and tilting.</p>
                     <a class="learn-more-btn" href="product_scs_700.html">Learn More</a>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 <img src="assets/media/IPSCS0800.gif" alt="gif explaining Straight Cargo System 800">
                 <div class="text-center">
                     <h3 class="text-center">Straight Cargo System 800</h3>
-                    <p class="text-left">Problems with unbalanced cargo? The Straight Cargo System 800 provides top support for wobbly, unstable cargo. Perfectly stablizes cargo and prevents shifting.</p>
+                    <p class="text-left">Problems with an unbalanced cargo basket? The Straight Cargo System 800 provides top support for wobbly, unstable cargo. Perfectly stabilizes a payload and prevents it from shifting. An easy solution to secure freight shipping. </p>
                     <a class="learn-more-btn" href="product_scs_800.html">Learn More</a>
                 </div>
             </div>
