Landing page pictures have background removed, better blending

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     <section id="landing-area-container" class="landing-area-container">
         <div class="wrap text-center">
             <div class="row top-row">
-                <div class="col-md-4 col-sm-4"><img class="circle" src="assets/media/green_unstable_circle.png" alt="green car crossed out with unstable cargo"></div>
+                <div class="col-md-4 col-sm-4"><img src="assets/media/green_unstable_updated.png" alt="green car crossed out with unstable cargo"></div>
                 <div class="col-md-4 col-sm-4"><a class="landing-area-brand" href="#products">
                         <div>
                             <h1>Innovative Problem Solutions, LLC <br> <i id="arrow" class="icon-down-big"></i></h1></div>
                     </a></div>
-                <div class="col-md-4 col-sm-4"><img class="circle" src="assets/media/red_unstable_circle.png" alt="red car crossed out with unstable cargo"></div>
+                <div class="col-md-4 col-sm-4"><img src="assets/media/red_unstable_updated.png" alt="red car crossed out with unstable cargo"></div>
             </div>
             <div class="row bot-row">
-                <div class="col-md-6 col-sm-6"><img src="assets/media/green_stable_cropped.png" alt="green car with stable cargo"></div>
+                <div class="col-md-6 col-sm-6"><img src="assets/media/green_stable_updated.png" alt="green car with stable cargo"></div>
 
-                <div class="col-md-6 col-sm-6"><img src="assets/media/red_stable_cropped.png" alt="red car with stable cargo"></div>
+                <div class="col-md-6 col-sm-6"><img src="assets/media/red_stable_updated.png" alt="red car with stable cargo"></div>
             </div>
         </div>
         <div class="mobile-wrap text-center">
